--- a/src/blocks/modules/main__content/main__content.scss
+++ b/src/blocks/modules/main__content/main__content.scss
@@ -11,6 +11,7 @@
     @include to($mobile) {
         justify-content: center;
         margin-top: 30px;
+        padding-left: 40px;
     }
     ul {
         display: flex;
@@ -23,7 +24,7 @@
     li {
         margin-right: 20px;
         position: relative;
-
+        white-space: nowrap;
         &.active {
             a {
                 font-family: $font-bold;
@@ -172,21 +173,39 @@
             }
         }
     }
+    .main__img-b-slider {
+        grid-area: main__img;
+        @include to($tablet) {
+            max-width: 70vw;
+        }
+        @include to($mobile) {
+            margin-bottom: 30px;
+            img {
+                padding: 0 5px;
+            }
+        }
+        img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            padding: 0 15px;
+        }
+    }
     &__firstpage {
         display: grid;
         grid-template-areas:
             "category slider"
+            "category main__img"
             "category products";
-        grid-gap: 30px;
+        gap: 30px;
         grid-template-columns: 290px 3fr;
-        grid-template-rows: 0fr 1fr;
+        grid-template-rows: 0fr 0fr 1fr;
+        @include to($tablet) {
+            grid-template-columns: 200px 3fr;
+        }
         @include to($mobile) {
-            grid-template-areas:
-                "slider"
-                "products";
-            grid-gap: 0px;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr;
+            display: block;
         }
         &--left {
             grid-area: category;
@@ -195,6 +214,9 @@
             padding: 28px;
             margin-bottom: 30px;
             height: fit-content;
+            @include to($tablet) {
+                padding: 20px 10px;
+            }
             @include to($mobile) {
                 display: none;
             }
@@ -269,6 +291,9 @@
             grid-area: slider;
             max-width: 875px;
             width: 100%;
+            @include to($tablet) {
+                max-width: 70vw;
+            }
             @include to($mobile) {
                 max-width: 100vw;
                 margin-bottom: 30px;
