--- a/src/views/_header.html
+++ b/src/views/_header.html
@@ -28,7 +28,7 @@
 
     <link href="libs/slick/slick.css" rel="stylesheet">
     <link href="libs/slick/slick-theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
+    <link href="styles/main.css" rel="stylesheet">
 
 </head>
 
